--- a/src/main/resources/assets/half_dream/lang/en_us.json
+++ b/src/main/resources/assets/half_dream/lang/en_us.json
@@ -12,5 +12,6 @@
 	"block.half_dream.dream_leaves" : "Dream Leaves",
 	"block.half_dream.dream_sapling" : "Dream Sapling",
 	"item.half_dream.dream_sapling" : "Dream Sapling",
-	"item.half_dream.dream_resin" : "Dream Resin"
+	"item.half_dream.dream_resin" : "Dream Resin",
+	"block.half_dream.bunny_plush" : "Bunny Plush"
 }
