--- a/src/main/resources/assets/half_dream/lang/en_us.json
+++ b/src/main/resources/assets/half_dream/lang/en_us.json
@@ -7,6 +7,7 @@
 	"block.half_dream.dream_sapling" : "Dream Sapling",
 	"item.half_dream.dream_sapling" : "Dream Sapling",
 	"item.half_dream.dream_resin" : "Dream Resin",
+	"item.half_dream.resin_horn" : "Resin Horn",
 	"block.half_dream.bunny_plush" : "Bunny Plush",
 	"block.half_dream.interloper_portal_block" : "Interloper Portal Block"
 }
